<resources>
    <string name="app_name">USB</string>
    <string name="back">뒤로가기</string>
    <string name="setting">설정</string>
    <string name="help">도움말</string>
    <string name="bluetooth">블루투스</string>
    <string name="usb_logo">팀 소개</string>
    <string name="search">검색</string>
    <string name="header">USB Project</string>
    <string name="study">학습하기</string>
    <string name="add_word">단어 추가</string>
    <string name="learning_word">단어 배우기</string>
    <string name="quiz">퀴즈 풀기</string>
    <string name="dummy1">더미</string>
    <string name="dummy2">더미더미더미</string>
    <string name="dummy3">더더더더더더미미미미미미</string>
    <string name="typing">직접 입력</string>
    <string name="image_detection">이미지 인식</string>
    <string name="STT">음성 인식</string>
    <string name="STT_start">음성 인식 시작</string>
    <string name="dot_num">점 위치</string>
    <string name="korean">한글</string>
    <string name="number">숫자</string>
    <string name="word">단어</string>
    <string name="dot_num_explain">원하는 점을 선택하고 출력 버튼을 누르세요</string>
    <string name="point_1">1점</string>
    <string name="point_2">2점</string>
    <string name="point_3">3점</string>
    <string name="point_4">4점</string>
    <string name="point_5">5점</string>
    <string name="point_6">6점</string>
    <string name="tgl_on">ON</string>
    <string name="tgl_off">OFF</string>
    <string name="output">출력</string>
    <string name="input">입력</string>
    <string name="consonant">자음</string>
    <string name="vowel">모음</string>
    <string name="abbreviation">약자</string>
    <string name="listen">다시 듣기</string>
    <string name="initial_consonant">초성</string>
    <string name="initial_double_consonant">초성 쌍자음</string>
    <string name="final_consonant">종성</string>
    <string name="final_double_consonant">종성 겹받침</string>
    <string name="con_abb">자음 약자</string>
    <string name="vo_abb">모음 약자</string>
    <string name="abb_u">약어</string>
    <string name="qz_read">읽기 퀴즈</string>
    <string name="qz_write">쓰기 퀴즈</string>
    <string name="voice_mode">보이스 모드</string>
    <string name="volume">볼륨</string>
    <string name="speed">속도</string>
    <string name="_0.5">0.5</string>
    <string name="_1">1</string>
    <string name="_1.5">1.5</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="save">저장</string>
    <string name="speak_answer">정답 말하기</string>
    <string name="type_answer">정답 입력하기</string>
    <string name="qz_read_description">아래 점자는 무엇일까요?</string>
    <string name="submission">제출</string>
    <string name="qz_listen_description">아래 단어는 무엇일까요?</string>
    <string name="change_mode">모드 변경</string>
    <string name="connected_device">연결된 장치 :</string>
    <string name="search_devices">디바이스 검색</string>
    <string name="paired_devices">이전 디바이스</string>
    <string name="nothing">없음</string>
    <string name="take_image">이미지 불러오기</string>
    <string name="recognize_text">텍스트 인식하기</string>
    <string name="recognized_text">내용 :</string>
    <string name="delete">삭제</string>
    <string name="blank">빈칸</string>
    <string name="dummy_long">이 편지는 영국에서 최초로 시작되어 일년에 한바퀴를 돌면서 받는 사람에게 행운을 주었고 지금은 당신에게로 옮겨진 이 편지는 4일 안에 당신 곁을 떠나야 합니다. 이 편지를 포함해서 7통을 행운이 필요한 사람에게 보내 주셔야 합니다. 복사를 해도 좋습니다. 혹 미신이라 하실지 모르지만 사실입니다.  영국에서 HGXWCH이라는 사람은 1930년에 이 편지를 받았습니다. 그는 비서에게 복사해서 보내라고 했습니다. 며칠 뒤에 복권이 당첨되어 20억을 받았습니다. 어떤 이는 이 편지를 받았으나 96시간 이내 자신의 손에서 떠나야 한다는 사실을 잊었습니다. 그는 곧 사직되었습니다. 나중에야 이 사실을 알고 7통의 편지를 보냈는데 다시 좋은 직장을 얻었습니다. 미국의 케네디 대통령은 이 편지를 받았지만 그냥 버렸습니다. 결국 9일 후 그는 암살당했습니다. 기억해 주세요. 이 편지를 보내면 7년의 행운이 있을 것이고 그렇지 않으면 3년의 불행이 있을 것입니다. 그리고 이 편지를 버리거나 낙서를 해서는 절대로 안됩니다. 7통입니다. 이 편지를 받은 사람은 행운이 깃들것입니다. 힘들겠지만 좋은게 좋다고 생각하세요. 7년의 행운을 빌면서…</string>
    <string name="help_des">USB와 함께\n혼자서도 점자 공부를 시작해보아요!\n\n
점자교육이 지루하고 어렵다는 생각은 그만!\n
USB와 함께라면 누구나 \n
혼자서도 쉽고 재미있게 \n
점자를 배우고, 가르칠 수 있어요.\n\n

효과적인 점자 교육을 하고 싶은 선생님,\n
이제 막 점자 교육이 필요한 우리 아이,\n
생활에 필요한 점자를 익혀야 하는 어른,\n
또 다른 언어, ‘점자’를 익히고 싶은 분,\n
스마트폰만 있다면 \n
모두 USB를 시작할 수 있어요.\n\n

시각장애인 친화 학습 서비스 USB와\n
재미있게 점자 공부를 시작해보세요!\n
점자블럭과 연결하여 입출력을 할 수 있어요!\n
시각장애인용 UI로 앱 사용이 더욱 쉬워졌어요.\n\n[앱 구성 내용 및 활용법]\n
*숫자, 한글(자음 첫소리, 모음, 받침 자음), 점 위치\n
- 기초 점자를 차례로 익힐 수 있어요.\n\n

*점자 학습하기\n
- 두 가지 단계 (단어배우기 / 퀴즈)로 \n
  나뉘어 있습니다.\n
- 차례대로 따라가다 보면 \n
  한글, 숫자 점자 규정을 \n
  자연스럽게 다 익힐 수 있을 거예요.\n\n

*나만의 단어 추가\n
- 직접 입력하는 것 뿐 아니라 \n
음성 인식, 이미지 인식을 통해 \n
손 쉽게 원하는 단어를 입력할 수 있어요.\n\n</string>
    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="loading">잠시만 기다려주세요…</string>
    <string name="hello">안녕하세요!</string>
    <string name="voice_mode_des">안녕하세요.\n눈이 불편하신 분들을 위해\n보이스 모드를 준비했습니다.\n보이스모드를 적용하시려면 더블 클릭을\n아니라면 슬라이드를 해주세요.</string>
    <string name="nextO">다음 출력</string>
    <string name="prevO">이전 출력</string>

</resources>