<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dot_num"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical"
        >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/toolbar"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dot_num"
            android:layout_margin="15dp"
            style="@style/txt_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dot_num_explain"
            style="@style/txt_contents"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1"
            >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right"
            tools:ignore="NestedWeights"
            android:weightSum="1"
            android:orientation="vertical"
            >

            <ToggleButton
                android:id="@+id/tgl_point_1"
                android:textOff="@string/point_1"
                style="@style/tgl_point"
                />
            <ToggleButton
                android:id="@+id/tgl_point_2"
                android:textOff="@string/point_2"
                style="@style/tgl_point"
                />
            <ToggleButton
                android:id="@+id/tgl_point_3"
                android:textOff="@string/point_3"
                style="@style/tgl_point"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:weightSum="1"
            android:orientation="vertical"
            android:gravity="left"
            >
            <ToggleButton
                android:id="@+id/tgl_point_4"
                android:textOff="@string/point_4"
                style="@style/tgl_point"
                />
            <ToggleButton
                android:id="@+id/tgl_point_5"
                android:textOff="@string/point_5"
                style="@style/tgl_point"
                />
            <ToggleButton
                android:id="@+id/tgl_point_6"
                android:textOff="@string/point_6"
                style="@style/tgl_point"
                />
        </LinearLayout>

        </LinearLayout>

            <Button
                android:id="@+id/btn_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output"
                android:gravity="center"
                android:layout_gravity="center"
                style="@style/btn_add_word"
                android:background="@drawable/button_study"
                />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>