<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/main"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/dark_main">

            <ImageButton
                android:id="@+id/Back"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                />

            <TextView
                android:id="@+id/Header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/header" />

            <ImageButton
                android:id="@+id/Help"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_baseline_help_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/help"/>

            <ImageButton
                android:id="@+id/Search"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_baseline_search_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/search" />

            <ImageButton
                android:id="@+id/Setting"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_baseline_settings_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/setting" />

        </LinearLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>