<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Korean"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical"
        >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/header_white"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/korean"
            android:layout_margin="15dp"
            style="@style/txt_title"/>
        <Button
            android:id="@+id/kor_consonant"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:background="@drawable/button_study"
            android:text="@string/consonant"
            style="@style/btn_add_word"
            />
        <Button
            android:id="@+id/kor_vowel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:background="@drawable/button_study"
            android:text="@string/vowel"
            style="@style/btn_add_word"
            />
        <Button
            android:id="@+id/kor_abbreviation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:background="@drawable/button_study"
            android:text="@string/abbreviation"
            style="@style/btn_add_word"
            />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>