<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bluetooth"
    android:background="@color/white"
    tools:ignore="MissingDefaultResource">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical"
        >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/toolbar"

            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:text="@string/bluetooth"
            style="@style/txt_title"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|start"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/connected_device"
                style="@style/txt_leftTitle"
                />
            <TextView
                android:id="@+id/txt_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nothing"
                style="@style/txt_leftTitle"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btn_pairedD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paired_devices"
                style="@style/btn_add_word"
                android:background="@drawable/button_study"
                />

            <Button
                android:id="@+id/btn_searchD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_devices"
                style="@style/btn_add_word"
                android:background="@drawable/button_study"
                />

        </LinearLayout>

        <ListView
            android:id="@+id/lstv_bluetoothD"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/round_border"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>