<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Learning_word"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical"
        >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/header_white"

            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:text="@string/learning_word"
            style="@style/txt_title"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            />
        <Button
            android:id="@+id/lw_dotNum"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:background="@drawable/button_study"
            android:text="@string/dot_num"
            style="@style/btn_add_word"
            />
        <Button
            android:id="@+id/lw_korea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:background="@drawable/button_study"
            android:text="@string/korea"
            style="@style/btn_add_word"
            />
        <Button
            android:id="@+id/lw_number"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:background="@drawable/button_study"
            android:text="@string/number"
            style="@style/btn_add_word"
            />
        <Button
            android:id="@+id/lw_word"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:background="@drawable/button_study"
            android:text="@string/word"
            style="@style/btn_add_word"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>