<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical"
        >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/toolbar"

            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            />
        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:text="@string/setting"
            style="@style/txt_title"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_border"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/txt_voiceMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voice_mode"
                    style="@style/txt_leftTitle"
                    />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <Switch
                    android:id="@+id/swbtn_voiceMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumb="@drawable/thumb"
                    android:track="@drawable/track"
                    android:text="@string/voice_mode"
                    android:textColor="@color/transparent"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bar"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center"
                android:weightSum="1"
                >
                <TextView
                    android:id="@+id/txt_volumeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volume"
                    style="@style/txt_leftTitle"
                    />
                <TextView
                    android:id="@+id/txt_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy1"

                    />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <SeekBar
                    android:id="@+id/skbr_volume"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center"
                android:weightSum="1"
                >
                <TextView
                    android:id="@+id/txt_speedName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    style="@style/txt_leftTitle"
                    />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <RadioGroup
                    android:id="@+id/rdg_speed"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="0dp"
                    >
                    <RadioButton
                        android:id="@+id/rdbtn_speed_0.5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0.5"
                        android:layout_marginEnd="4dp"

                        />
                    <RadioButton
                        android:id="@+id/rdbtn_speed_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1"
                        android:layout_marginEnd="4dp"
                        />
                    <RadioButton
                        android:id="@+id/rdbtn_speed_1.5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1.5"
                        android:layout_marginEnd="4dp"
                        />
                    <RadioButton
                        android:id="@+id/rdbtn_speed_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2"
                        android:layout_marginEnd="4dp"
                        />
                    <RadioButton
                        android:id="@+id/rdbtn_speed_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3"
                        />
                </RadioGroup>
            </LinearLayout>


        </LinearLayout>
        <Button
            android:id="@+id/btn_saveSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="20dp"
            android:layout_gravity="end"
            style="@style/btn_add_word"
            android:background="@drawable/button_study"

            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>